version-23.1/manage/tiered-storage.mdx
---
title: Tiered Storage
linkRoot: ../../
deployment: Linux
contextLinks:
  - name: 'Linux'
    to: 'manage/tiered-storage'
  - name: 'Kubernetes'
    to: manage/kubernetes/tiered-storage
---

<head>
    <meta name="title" content="Tiered Storage | Redpanda Docs"/>
    <meta name="description" content="Configure your Redpanda cluster to offload log segments to cloud storage and save storage costs."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/manage/tiered-storage/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ClusterProperty from './shared/tiered-storage/_cluster-props.mdx'
import TunableClusterProperty from './shared/tiered-storage/_tunable-cluster-props.mdx'
import NodeProperty from './shared/tiered-storage/_node-props.mdx'
import EnterpriseLicenseNote from '@site/docs/shared/_enterprise-license.mdx'
import AboutTieredStorage from './shared/tiered-storage/_intro.mdx';
import SetUp from './shared/tiered-storage/_set-up.mdx';
import Enable from './shared/tiered-storage/_enable.mdx';
import SetRetentionLimits from './shared/tiered-storage/_set-retention-limits.mdx';
import RemoteWrite from './shared/tiered-storage/_remote-write.mdx';
import IdleTimeout from './shared/tiered-storage/_idle-timeout.mdx';
import Reconciliation from './shared/tiered-storage/_reconciliation.mdx';
import UploadController from './shared/tiered-storage/_upload-controller.mdx';
import RemoteRead from './shared/tiered-storage/_remote-read.mdx';
import RemoteRecovery from './shared/tiered-storage/_remote-recovery.mdx';
import RetriesAndBackoff from './shared/tiered-storage/_retries-and-backoff.mdx';
import Transport from './shared/tiered-storage/_transport.mdx';
import CloudStorageHousekeeping from './shared/tiered-storage/_cloud-storage-housekeeping.mdx';
import AdjacentSegmentMerging from './shared/tiered-storage/_adjacent-segment-merging.mdx';
import ConfigurationProperties from './shared/tiered-storage/_configuration-properties.mdx';
import ResetPropertyInfo from './shared/tiered-storage/_reset-property-info.mdx';
import AzureBlobLimitations from '../manage/shared/tiered-storage/_azure-blob-limitations.mdx'


import ContextLink from '@site/src/components/ContextButton.js'

<ContextLink frontmatter={frontMatter}
/>

<AboutTieredStorage frontmatter={frontMatter}/>

## Prerequisites

<EnterpriseLicenseNote frontmatter={frontMatter}/>

## Set up Tiered Storage

<SetUp/>

### Configure object storage

Redpanda natively supports Tiered Storage with Amazon Simple Storage Service (S3), Google Cloud Storage (GCS, which uses the Google Cloud Platform S3 API), and Microsoft Azure Blob Storage (ABS). 

:::info
- Migrating topics from one object storage provider to another is not supported. 
- Migrating topics from one bucket or container to another is not supported.
:::


<!--
[tabs]
=====
Amazon S3::
+
--
Configure access to Amazon S3 with either an IAM role attached to the instance or with access keys.

To configure access to an S3 bucket with an IAM role:

. Configure an link:../../manage/security/iam-roles/#configuring-iam-roles[IAM role].
. Run the `rpk cluster config edit` command, then edit the following required properties:
+
[,properties]
----
cloud_storage_enabled: true
cloud_storage_credentials_source: aws_instance_metadata
cloud_storage_region: <region>
cloud_storage_bucket: <redpanda_bucket_name>
----
+
:::note notes

 ** Replace `<placeholders>` with your own values.
 ** For additional properties, see <<tiered-storage-configuration-properties,Tiered Storage configuration properties>>.
:::

+
<ResetPropertyInfo name="_reset-property-info.mdx" frontmatter=\{frontMatter}/>

To configure access to an S3 bucket with access keys instead of an IAM role:

. Grant a user the following permissions to read and create objects on the bucket to be used with the cluster (or on all buckets): `GetObject`, `DeleteObject`, `PutObject`, `PutObjectTagging`, `ListBucket`.
. Copy the access key and secret key for the `cloud_storage_access_key` and `cloud_storage_secret_key` cluster properties.
. Run the `rpk cluster config edit` command, then edit the following required properties:
+
[,properties]
----
cloud_storage_enabled: true
cloud_storage_access_key: <access_key>
cloud_storage_secret_key: <secret_key>
cloud_storage_region: <region>
cloud_storage_bucket: <redpanda_bucket_name>
----
+
:::note notes

 ** Replace `<placeholders>` with your own values.
 ** For additional properties, see <<tiered-storage-configuration-properties,Tiered Storage configuration properties>>.
:::

+
<ResetPropertyInfo name="_reset-property-info.mdx" frontmatter=\{frontMatter}/>

--
Google Cloud Storage::
+
--
Configure access to Google Cloud Storage with either an IAM role attached to the instance or with access keys.

To configure access to Google Cloud Storage with an IAM role:

. Configure an link:../../manage/security/iam-roles/#configuring-iam-roles[IAM role].
. Run the `rpk cluster config edit` command, then edit the following required properties:
+
[,properties]
----
cloud_storage_enabled: true
cloud_storage_credentials_source: gcp_instance_metadata
cloud_storage_region: <region>
cloud_storage_bucket: <redpanda_bucket_name>
----
+
:::note notes

 ** Replace `<placeholders>` with your own values.
 ** For additional properties, see <<tiered-storage-configuration-properties,Tiered Storage configuration properties>>.
:::

+
<ResetPropertyInfo name="_reset-property-info.mdx" frontmatter=\{frontMatter}/>

To configure access to Google Cloud Storage with access keys instead of an IAM role:

. Choose a uniform access control when you create the bucket.
. Use a Google-managed encryption key.
. Set a https://cloud.google.com/storage/docs/migrating#defaultproj[default project].
. Create a service user with https://cloud.google.com/storage/docs/authentication/managing-hmackeys[HMAC keys] and copy the access key and secret key for the `cloud_storage_access_key` and `cloud_storage_secret_key` cluster properties.
. Run the `rpk cluster config edit` command, then edit the following required properties:
+
[,properties]
----
cloud_storage_enabled: true
cloud_storage_api_endpoint: storage.googleapis.com
cloud_storage_access_key: <access_key>
cloud_storage_secret_key: <secret_key>
cloud_storage_bucket: <redpanda_bucket_name>
cloud_storage_region: <region>
----
+
:::note notes

 ** Replace `<placeholders>` with your own values.
 ** For additional properties, see <<tiered-storage-configuration-properties,Tiered Storage configuration properties>>.
:::

+
<ResetPropertyInfo name="_reset-property-info.mdx" frontmatter=\{frontMatter}/>

--
Azure Blob Storage::
+
--
+++<AzureBlobLimitations>++++++</AzureBlobLimitations>+++

To configure access to Azure Blob Storage with shared keys:

. Copy an account access key for the Azure container you want Redpanda to use and enter it in the `cloud_storage_azure_shared_key` property. For information on how to view your account access keys, see the https://learn.microsoft.com/en-us/azure/storage/common/storage-account-keys-manage?toc=%2Fazure%2Fstorage%2Fblobs%2Ftoc.json&bc=%2Fazure%2Fstorage%2Fblobs%2Fbreadcrumb%2Ftoc.json&tabs=azure-portal#view-account-access-keys[Azure documentation].
. Run the `rpk cluster config edit` command, then edit the following required properties:
+
[,properties]
----
cloud_storage_enabled: true
cloud_storage_azure_shared_key: <azure_account_access_key>
cloud_storage_azure_storage_account: <azure_account_name>
cloud_storage_azure_container: <redpanda_container_name>
----
+
:::note notes

 ** Replace `<placeholders>` with your own values.
 ** For additional properties, see <<tiered-storage-configuration-properties,Tiered Storage configuration properties>>.
 ** For information about how to grant access from an internet IP range (if you need to open additional routes/ports between your broker nodes and Azure Blob Storage; for example, in a hybrid cloud deployment), see the https://learn.microsoft.com/en-us/azure/storage/common/storage-network-security?toc=%2Fazure%2Fstorage%2Fblobs%2Ftoc.json&bc=%2Fazure%2Fstorage%2Fblobs%2Fbreadcrumb%2Ftoc.json&tabs=azure-portal#grant-access-from-an-internet-ip-range[Microsoft documentation].
 ** For information about shared key authentication, see the https://learn.microsoft.com/en-us/rest/api/storageservices/authorize-with-shared-key[Microsoft documentation].
:::

+
<ResetPropertyInfo name="_reset-property-info.mdx" frontmatter=\{frontMatter}/>

--
=====
-->


### Enable Tiered Storage

<Enable frontmatter={frontMatter}/>

### Set retention limits

<SetRetentionLimits frontmatter={frontMatter}/>

## Remote write

<RemoteWrite frontmatter={frontMatter}/>

### Idle timeout

<IdleTimeout frontmatter={frontMatter}/>

### Reconciliation 

<Reconciliation frontmatter={frontMatter}/>

### Upload controller

<UploadController frontmatter={frontMatter}/>

## Remote read

<RemoteRead frontmatter={frontMatter}/>

### Caching 

When the Kafka client fetches an offset range that isn’t available locally in the Redpanda data directory, Redpanda downloads remote segments from object storage. These downloaded segments are stored in the object storage cache directory. The cache directory is created in the Redpanda `data` directory by default, but it can be placed anywhere in the system. For example, you might want to put the cache directory to a dedicated drive with cheaper storage. 

If you don’t specify a cache location in the `redpanda.yaml` file, the cache directory is created in `<redpanda_data_directory>/cloud_storage_cache`. 

Use the <NodeProperty name="cloud_storage_cache_directory" frontmatter={frontMatter}/>  property on each broker to specify a different location for the cache directory. You must specify the full path. 

Redpanda checks the cache periodically, and if the size of the stored data is larger than the configured limit, the eviction process starts. The eviction process removes segments that haven’t been accessed recently, until the size of the cache drops 20%. 

Use the following cluster-level properties to set the maximum cache size and cache check interval. Edit them with the `rpk cluster config edit` command.

| Property      | Description |
| ----------- | ----------- |
| <ClusterProperty name="cloud_storage_cache_size" frontmatter={frontMatter}/> | Maximum size of the disk cache used by Tiered Storage. Default is 20 GiB. |
| <TunableClusterProperty name="cloud_storage_cache_check_interval" frontmatter={frontMatter}/> | The time, in milliseconds, between cache checks. The size of the cache can grow quickly, so it’s important to have a small interval between checks. However, if the checks are too frequent, they consume a lot of resources. Default is 30000 ms. |

## Disaster recovery 

<RemoteRecovery frontmatter={frontMatter}/>

## Retries and backoff 

<RetriesAndBackoff frontmatter={frontMatter}/>

## Transport 

<Transport frontmatter={frontMatter}/>

## Object storage housekeeping

<CloudStorageHousekeeping frontmatter={frontMatter}/>

### Adjacent segment merging

<AdjacentSegmentMerging frontmatter={frontMatter}/>

## Tiered Storage configuration properties

<ConfigurationProperties frontmatter={frontMatter}/>

## Suggested reading

- [How we built shadow indexing, the subsystem powering Tiered Storage](https://redpanda.com/blog/tiered-storage-architecture-shadow-indexing-deep-dive/)
- [Configure Cluster Properties](../cluster-maintenance/cluster-property-configuration)
